Amazon-EKS-Deployment/7_App_Deployment/Logging/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic
  namespace: elastic-system
  annotations:
   kubernetes.io/ingress.class: nginx
   cert-manager.io/cluster-issuer: letsencrypt-prod
   nginx.ingress.kubernetes.io/backend-protocol: HTTPS

spec:
  ingressClassName: nginx
  rules:
    - host: kibana.2waveyyy.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: elastic
              port:
                number: 5601
  tls:
    - secretName: elastic-tls
      hosts:
        - kibana.2waveyyy.com
